udemy/ingress/deployment-httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: udemy
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd
