udemy/ingress/deployment-ingress-controller-stage-bamboo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "22"
    meta.helm.sh/release-name: nginx-ingress-controller
    meta.helm.sh/release-namespace: stage
  creationTimestamp: "2021-08-05T18:43:45Z"
  generation: 22
  labels:
    app.kubernetes.io/instance: nginx-ingress-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress-controller-nginx-ingress
    helm.sh/chart: nginx-ingress-0.6.1
  name: nginx-ingress-controller-nginx-ingress
  namespace: stage
  resourceVersion: "71728444"
  selfLink: /apis/apps/v1/namespaces/stage/deployments/nginx-ingress-controller-nginx-ingress
  uid: 1021df7d-ecbf-4138-aa18-eb5abd172df9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-ingress-controller-nginx-ingress
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2022-03-29T13:43:07Z"
        prometheus.io/port: "9113"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: nginx-ingress-controller-nginx-ingress
    spec:
      containers:
      - args:
        - -nginx-plus=false
        - -nginx-reload-timeout=0
        - -enable-app-protect=false
        - -nginx-configmaps=$(POD_NAMESPACE)/nginx-ingress-controller-nginx-ingress
        - -default-server-tls-secret=$(POD_NAMESPACE)/nginx-ingress-controller-nginx-ingress-default-server-secret
        - -ingress-class=nginx
        - -use-ingress-class-only=false
        - -health-status=false
        - -health-status-uri=/nginx-health
        - -nginx-debug=false
        - -v=1
        - -nginx-status=true
        - -nginx-status-port=8080
        - -nginx-status-allow-cidrs=127.0.0.1
        - -report-ingress-status
        - -enable-leader-election=true
        - -leader-election-lock-name=nginx-ingress-controller-nginx-ingress-leader-election
        - -enable-prometheus-metrics=true
        - -prometheus-metrics-listen-port=9113
        - -enable-custom-resources=true
        - -enable-tls-passthrough=false
        - -enable-snippets=false
        - -ready-status=true
        - -ready-status-port=8081
        image: nginx/nginx-ingress:1.8.1
        imagePullPolicy: IfNotPresent
        name: nginx-ingress-controller-nginx-ingress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 9113
          name: prometheus
          protocol: TCP
        - containerPort: 8081
          name: readiness-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /nginx-ready
            port: readiness-port
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: nginx-ingress-controller-nginx-ingress
      serviceAccountName: nginx-ingress-controller-nginx-ingress
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-08-05T18:43:45Z"
    lastUpdateTime: "2022-03-29T13:43:34Z"
    message: ReplicaSet "nginx-ingress-controller-nginx-ingress-7c49b8cb56" has successfully
      progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-04-05T10:02:38Z"
    lastUpdateTime: "2022-04-05T10:02:38Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 22
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
